--- a/admin/templates/bootstrap/css/custom.less
+++ b/admin/templates/bootstrap/css/custom.less
@@ -3223,3 +3223,6 @@ input[type=number] {
     min-width: 100%;
     max-width: inherit;
 }
+.save-wrapper .row > div {
+    margin-bottom: 8px;
+}
